@@ -1,6 +1,7 @@
 config DS_PACKAGE_LTRACE
 	bool "ltrace 0.3.36 (binary only) - DOES NOT BUILD YET, STILL IN PROGRESS"
 	default n
+	select DS_LIB_libelf
 	help
 		ltrace - library call tracer
 
