@@ -6,6 +6,10 @@ TODO:
 - bird and netsnmp don't build with more than one job
 
 Latest changes:
+- Added libelf library needed by ltrace (BUILD OK, BUT UNTESTED)
+- Added section "debug helpers" in menuconfig
+- Added debug helper package strace (binary only)
+- Added debug helper package ltrace (binary only) - DOES NOT COMPILE YET
 - Updated cifsmount package to 0.2: added CGI (web config) for up to three
   mounts; added init.d start/stop scripts; added script 'cifsmount' for more
   convenient command line (un-)mounting.
